# fintech-rag

./: .env.example  .gitignore  .graphifyignore  README.md  colab.ipynb  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
core/: clients.py  embeddings.py  llm.py  models.py  rag.py  retrieval.py  retrieval_strategies.py  retry.py
docs/superpowers/plans/: 2026-07-11-fintech-rag-phase1.md  2026-07-12-ui-redesign.md
docs/superpowers/specs/: 2026-07-11-fintech-rag-demo-design.md  2026-07-12-ui-redesign-design.md
eval/: golden_dataset.py  judge.py  retrieval_metrics.py  run_eval.py
ingestion/: chunk_filings.py  chunk_filings_advanced.py  chunk_filings_basic.py  fetch_filing_pdf.py  fetch_filings.py  index_comparison_collections.py  index_to_qdrant.py  text_utils.py
scripts/: smoke_test.py
tests/: test_chunking.py  test_clients.py  test_embeddings.py  test_evaluation.py  test_fetch_filings.py  test_index_to_qdrant.py  test_models.py  test_rag.py  test_retrieval.py  test_text_utils.py
ui/: app.py  markdown_table.py
ui/pages/: 1_Pipeline_Comparison.py
ui/tabs/: architecture.py  evaluation.py  pipeline_comparison.py  qa.py
