[project]
name = "fintech-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "voyageai>=0.3.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "beautifulsoup4>=4.12.0",
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.8.0",
    "requests>=2.32.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.2.2",
    "docling>=2.0.0",
    "langchain-community>=0.3.0",
    "pypdf>=5.0.0",
    "portkey-ai>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "ingestion*", "ui*", "eval*"]
